<resources>
    <string name="app_name">Calculator</string>
    <string name="_enter_numbers">Enter Numbers</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_.">.</string>
    <string name="_negative">(-)</string>
    <string name="_left_p">(</string>
    <string name="_right_p">)</string>
    <string name="_plus">+</string>
    <string name="_minus">-</string>
    <string name="_star">*</string>
    <string name="_slash">/</string>
    <string name="_carrot">^</string>
    <string name="_enter">ENTER</string>
    <string name="_clear">CLEAR</string>
    <string name="_history">HISTORY</string>
    <string name="_undo">UNDO</string>
    <string name="_back">BACK</string>
</resources>