<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main">

    <TextView
        android:id="@+id/formula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/_enter_numbers"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/inputButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toTopOf="@+id/bottomButtons"
        >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_1"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_2"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_3"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            />

        <Button
            android:id="@+id/opAdd"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_plus"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/purple_700"
            />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_4"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_5"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_6"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            />

        <Button
            android:id="@+id/opSubtract"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_minus"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/purple_700"
            />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_7"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_8"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_9"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            />

        <Button
            android:id="@+id/opMultiply"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_star"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/purple_700"
            />

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_0"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            />

        <Button
            android:id="@+id/buttonDecimal"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_."
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            />

        <Button
            android:id="@+id/negative"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_negative"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            />

        <Button
            android:id="@+id/opDivide"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_slash"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/purple_700"
            />

        <Button
            android:id="@+id/buttonLeftP"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_left_p"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            />

        <Button
            android:id="@+id/buttonRightP"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_right_p"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            />

        <Button
            android:id="@+id/undo"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_undo"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            />

        <Button
            android:id="@+id/opSquare"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_carrot"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/purple_700"
            />

    </GridLayout>

    
    <GridLayout
        android:id="@+id/bottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"

        >

        <Button
            android:id="@+id/history"
            android:layout_width="120dp"
            android:layout_gravity="fill"
            android:layout_height="60dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_history"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/white"
            android:background="@color/purple_200"


             />

        <Button
            android:id="@+id/enter"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_gravity="fill_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_enter"
            android:textSize="32sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/white"
            android:background="@color/purple_200"

            />

        <Button
            android:id="@+id/clear"
            android:layout_height="60dp"
            android:layout_width="wrap_content"
            android:layout_gravity="fill"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="0dp"
            android:text="@string/_clear"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@+id/enter"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/white"
            android:background="@color/purple_200"


            />
    </GridLayout>
    





    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />




</androidx.constraintlayout.widget.ConstraintLayout>